# rust-log-reader

./: Cargo.toml  README.md  Setting.toml
src/: connect.rs  logs.rs  main.rs  table.rs  transaction.rs
src/files/: load_config.rs
