[package]
name = "db-log"
version = "0.1.0"
authors = ["Eduardo Sabino <eduardoaikin@gmail.com>", "Gabriel Guerezi <gabrielguerezi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.17.5"
config = "0.11"